💄 style: Additional fix to warnings reported by IntelliJ